# skreate

./: .gitignore  Cargo.toml  README.md  makefile  skreate-cli  todo.md
cli/: Cargo.toml
cli/src/: main.rs
doc/: Cargo.toml  manual.hbs  tutorial.hbs
doc/src/: main.rs
example-gen/: Cargo.toml
example-gen/src/: main.rs
examples/: skills1-1.skate  skills1-2.skate  skills1-3.skate  skills1.txt  skills2-1.skate  skills2-2.skate  skills2-4.skate  skills3-1.skate
lib/: Cargo.toml
lib/fuzz/: Cargo.toml
lib/fuzz/fuzz_targets/: moves.rs
lib/src/: direction.rs  error.rs  lib.rs  moves.rs  params.rs  parser.rs  types.rs
lib/src/moves/: both.rs  bracket.rs  choctaw.rs  coe.rs  compound.rs  counter.rs  edge.rs  hop.rs  info.rs  jump.rs  (+14 more)
lib/tests/: compare.rs
man/: Cargo.toml
wasm/: Cargo.toml  index.html  makefile
wasm/src/: lib.rs
web/: index.html  manual.html  preview.html  skreate.js  tutorial.html
web/css/: manual.css  style.css
web/doc/: manual.html
web/examples/: golden-skaters-waltz.skate  novice-foxtrot.skate  rhythm-blues.skate  riverside-rhumba.skate  skills1-1.skate  skills1-2.skate  skills1-3.skate  skills1-4.skate  skills2-1.skate  skills2-2.skate  skills2-3.skate  skills2-4.skate  skills2-5.skate  skills3-1.skate  skills3-2.skate  skills3-3.skate  skills3-4.skate  skills3-5.skate  skills4-1.skate  skills4-2.skate  skills4-3.skate  skills4-4.skate  skills4-5.skate  skills5-1.skate  skills5-2.skate  skills5-3.skate  skills5-4.skate  skills5-5.skate  skills6-1.skate  skills6-2.skate  skills6-3.skate  skills6-4.skate  skills6-5.skate
(+16 files in other folders)
